update index.html with code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
 
 <body>
 
+  <div class = "top">
+    <div id="screen">0
+    </div>
+  </div>
+
+<!-- Left side buttons -->
+  <div class = "left">
+    <div class="digit" id="7">7</div>
+    <div class="digit" id="8">8</div>
+    <div class="digit" id="9">9</div>
+    <div class="digit" id="4">4</div>
+    <div class="digit" id="5">5</div>
+    <div class="digit" id="6">6</div>
+    <div class="digit" id="1">1</div>
+    <div class="digit" id="2">2</div>
+    <div class="digit" id="3">3</div>
+    <div class="digit zero" id="0">0</div>
+    <div id="10" class="digit">.</div>
+  </div>
+
+<!-- Right side buttons -->
+  <div class = "right">
+    <div class="funct clear" id="16">Clear</div>
+    <div class="funct multiply" id="14">x</div>
+    <div class="funct divide" id="13">/</div>
+    <div class="funct subtract" id="12">-</div>
+    <div class="funct add" id="11">+</div>
+    <div class="funct equal" id="15">=</div>
+  </div>
+
 
 
   <script src="js/jquery-3.2.1.min.js"></script>
